# CodeKnow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  TODO.md  package-lock.json  package.json  project-scripts.py  pyproject.toml  pyrefly.toml  ruff.toml  skills-lock.json
.agents/skills/bd/: SKILL.md
.agents/skills/tdd-rgb/: SKILL.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.sandcastle/: CODING_STANDARDS.md  implement-prompt.md  main.mts
docs/: SetUp.md  infra-setup.md  install.md  system-diagram.md  usage.md
e2e/: .env.e2e  AGENTS.md  README.md  check_services.py  conftest.py  test_embeddings.py  test_incremental_reindex.py
e2e/api_cli_integration/: __init__.py  test_cli_api_integration.py
e2e/graph_gen/: test_graph_gen.py  test_hybrid_search.py  test_hybrid_search_report.md  test_hybrid_vs_agent_grep.py  test_hybrid_vs_agent_grep_report.md  test_run_2026-05-19.md
e2e/graph_gen/code-test-small/: pnpm-lock.yaml
e2e/judge/: __init__.py  judge.py  schemas.py  test_judge.py
e2e/test_graph/: test_graph_gen.py  test_hybrid_search.py  test_hybrid_search_report.md  test_hybrid_vs_agent_grep.py  test_hybrid_vs_agent_grep_report.md
evalkit/: JUDGE_PRINCIPLES.md  pyproject.toml
evalkit/src/evalkit/: __init__.py  citations.py  llm.py  schemas.py
evalkit/src/evalkit/judge/: __init__.py  aggregate.py  judge.py  prompts.py  stage0.py  stage1.py  stage2.py  stage3.py
evalkit/tests/: test_aggregate.py  test_citations.py  test_judge.py  test_llm.py  test_schemas.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py
evals/: .env.example  README.md  __init__.py  build_fastify_graph.py  eval_fastify.py  fastify_eval_support.py  run_fastify_eval.sh  test_fastify_eval_integration.py
evals/.cache/fastify-graph/: chunk_map.json  embed_stats.json  graph.json  metadata.json
evals/results/fastify/: profile.md  runs.jsonl
evals/support/: __init__.py  fastify_eval_support.py  test_fastify_eval_integration.py
infra/: chroma.local.yaml  docker-compose.yml  install-ollama-and-qwen3-embedding.sh  ripGrep.sh  setup-embedding-model.sh
notes/: 2026-05-18-weighted-bfs.md
notes/cli/: 14_add_to_index_generated_client.md  16_cli_remove_from_index.md
plan/: 01_data_model_and_pipeline.md  02_api_surface.md  03_chunk_mapping.md  06_semantic_search.md  07_e2e_build_graph_test.md  07_e2e_graph_gen_test.md  08.1_pipeline-save-load.md  08_hybrid-search.md  08_search_api.md  09_cache_overhaul.md  12_gap_implementation_plan.md  13_multi_graph_search_fixes.md  14_cli_add_to_index.md  15_cli_search.md  17_build_sse_progress.md  18_pip_install_global.md  19_hybrid_vs_grep_judge.md  20_build_async_job.md  23_docker_model_runner_embeddings.md  API_endpoint_plan.md  API_implementation_cheatsheet.md  hybrid_search_improvement_plan.md  main_plan.md
plan/done/: 03_chunk_mapping.md  06_semantic_search.md  10_cache_redis.md  14.1_build.md  14.3_delete.md  14.4_list_repos.md  16_cli_remove_from_index.md  19_hybrid_vs_grep_judge.md  21_md_test_reports.md  22_mypy_to_pyrefly.md  evalkit_agentic_judge.md
plan/future/: community-boosted-search.md  reindex-on-git-update.md
plan/improve/: 01-collapse-hybrid-search.md  02-insulate-api-from-lib-internals.md  03-deepen-extraction-pipeline.md  04-unify-dual-daemon-start.md  05-collapse-schema-validation.md  architecture-review-2026-06-11.html  implementation-status.md
plan/subplans/: 14.2_search.md
raw/: mcp.txt
src/codeknow/: __init__.py  cache.py  cli.py  schemas.py  validate.py
src/codeknow/cache/: __init__.py  hash.py  protocol.py
src/codeknow/extract/: ast.py  detect.py
src/codeknow/git_download/: __init__.py
src/codeknow/graph/: __init__.py  analyze.py  build.py  cluster.py  engine.py
src/codeknow/pipeline/: __init__.py  config.py  io.py  runner.py  stages.py  types.py
src/codeknow/vector/: __init__.py  _utils.py  chroma.py  embeddings.py  metadata.py  pipeline_stage.py  store.py
tests/: test_analyze.py  test_build.py  test_cluster.py  test_confidence.py  test_embed_stage.py  test_engine.py  test_git_download.py  test_hypergraph.py  test_repo_map.py  test_semantic_similarity.py
