[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeknow"
version = "0.1.0"
description = "Knowledge graph pipeline for code — extract entities, map to chunks, serve via API"
requires-python = ">=3.10,<3.14"
keywords = ["knowledge-graph", "code-analysis", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gitpython",
    "networkx",
    "pydantic>=2.0",
    "pydantic-settings",
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "fastapi",
    "uvicorn",
    "graspologic; python_version < '3.13'",
    "langchain-core",
    "langchain-openai",
    "chromadb",
]

[project.scripts]
dev-check = "codeknow.cli:dev_check"
pipeline = "codeknow.cli:run_pipeline_cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/codeknow"]

[tool.ruff]
exclude = ["raw", "plan", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D205",
    "D400",
    "D401",
    "D417",
    "COM812",
    "ANN401",
    "PLC0415",
    "BLE001",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "N803",
    "N806",
    "PERF401",
    "RUF001",
    "RUF002",
    "B023",
    "B005",
    "B904",
    "SIM102",
    "SIM115",
    "S110",
    "PLW2901",
    "ERA001",
    "ARG001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "INP001", "N802", "S101"]
"e2e/**" = ["ANN001", "ANN201", "ANN202", "INP001", "N802", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "types-networkx>=3.6.1.20260508",
    "types-openpyxl>=3.1.5.20260508",
]
