[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeknow"
version = "0.1.0"
description = "Index GitHub repos into a searchable code knowledge graph — CLI, API server, and background daemon"
requires-python = ">=3.10,<3.14"
dependencies = [
    "codeknow-lib",
    "codeknow-api",
    "codeknow-cli",
]

[project.scripts]
codeknow = "codeknow_cli.main:main"
codeknow-api = "codeknow_api.app:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/codeknow-lib/src/codeknow",
    "packages/codeknow-api/src/codeknow_api",
    "packages/codeknow-cli/src/codeknow_cli",
    "packages/codeknow-cli/generated/code_know_api_client",
]

[tool.hatch.build.targets.editable]
dev-mode-dirs = [
    "packages/codeknow-lib/src",
    "packages/codeknow-api/src",
    "packages/codeknow-cli/src",
    "packages/codeknow-cli/generated",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
codeknow-lib = { workspace = true }
codeknow-api = { workspace = true }
codeknow-cli = { workspace = true }

[dependency-groups]
dev = [
    "pyrefly",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
    "types-networkx>=3.6.1.20260508",
    "types-openpyxl>=3.1.5.20260508",
    "fakeredis[lua]>=2.35.0",
    "openapi-python-client>=0.24",
]

[tool.ruff]
exclude = ["raw", "plan", ".venv", "packages/codeknow-cli/generated"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D205",
    "D400",
    "D401",
    "D417",
    "COM812",
    "ANN401",
    "PLC0415",
    "BLE001",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "N803",
    "N806",
    "PERF401",
    "RUF001",
    "RUF002",
    "D203",
    "D213",
    "B023",
    "B005",
    "B904",
    "SIM102",
    "SIM115",
    "S110",
    "PLW2901",
    "ERA001",
    "ARG001",
    "ARG002",
    "ASYNC240",
    "FBT001",
    "FBT002",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN001", "ANN201", "ANN202", "INP001", "N802", "S101", "SLF001"]
"e2e/**" = ["ANN001", "ANN201", "ANN202", "INP001", "N802", "S101", "SLF001"]

[tool.pytest.ini_options]
testpaths = ["packages/codeknow-lib/tests"]
pythonpath = ["e2e"]
markers = ["llm_judge: requires JUDGE_LLM_API_KEY or OPENROUTER_API_KEY"]

[tool.pyrefly]
python-version = "3.10"
project-includes = ["packages/codeknow-lib", "packages/codeknow-api", "packages/codeknow-cli"]
project-excludes = [
    "packages/*/tests/**",
    "packages/codeknow-cli/generated/**",
]
search-path = [
    "packages/codeknow-lib/src",
    "packages/codeknow-api/src",
    "packages/codeknow-cli/src",
    "packages/codeknow-cli/generated",
]
ignore-missing-imports = ["redis", "redis.*", "daemonocle", "daemonocle.*", "openapi_python_client", "openapi_python_client.*"]

[tool.pyrefly.errors]
implicit-any = true
implicit-any-type-argument = false
implicit-any-empty-container = false

[[tool.pyrefly.sub-config]]
matches = "packages/codeknow-lib/src/codeknow/cache/redis.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-assignment = false
not-async = false

[[tool.pyrefly.sub-config]]
matches = "packages/codeknow-lib/src/codeknow/graph/analyze.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
matches = "packages/codeknow-lib/src/codeknow/vector/search.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
matches = "packages/codeknow-cli/src/codeknow_cli/client.py"
[tool.pyrefly.sub-config.errors]
bad-return = false
