[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeknow"
version = "0.1.0"
description = "Index GitHub repos into a searchable code knowledge graph — CLI, API server, and background daemon"
requires-python = ">=3.10,<3.14"
dependencies = [
    "codeknow-lib",
    "codeknow-api",
    "codeknow-cli",
    "evalkit",
]

[project.scripts]
codeknow = "codeknow_cli.main:main"
codeknow-api = "codeknow_api.app:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/codeknow-lib/src/codeknow",
    "packages/codeknow-api/src/codeknow_api",
    "packages/codeknow-cli/src/codeknow_cli",
    "packages/codeknow-cli/generated/code_know_api_client",
    "evalkit/src/evalkit",
]

[tool.hatch.build.targets.editable]
dev-mode-dirs = [
    "packages/codeknow-lib/src",
    "packages/codeknow-api/src",
    "packages/codeknow-cli/src",
    "packages/codeknow-cli/generated",
    "evalkit/src",
]

[tool.uv.workspace]
members = ["packages/*", "evalkit"]

[tool.uv.sources]
codeknow-lib = { workspace = true }
codeknow-api = { workspace = true }
codeknow-cli = { workspace = true }
evalkit = { workspace = true }

[dependency-groups]
dev = [
    "pyrefly",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
    "types-networkx>=3.6.1.20260508",
    "types-openpyxl>=3.1.5.20260508",
    "fakeredis[lua]>=2.35.0",
    "openapi-python-client>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["packages/codeknow-lib/tests", "evalkit/tests"]
pythonpath = ["e2e"]
markers = [
    "llm_judge: requires JUDGE_LLM_API_KEY or OPENROUTER_API_KEY",
    "slow: long-running tests (15+ minutes)",
]

