[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalkit"
version = "0.1.0"
description = "Reference-free agentic-search judge + harness (3-stage: grounding, faithfulness, consistency, preference)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "codeknow-lib",
    "langchain-openai",
    "pydantic>=2.12.5",
    "pydantic-settings",
    "scipy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evalkit"]
